logs/rovio/build.make.024.log.stderr
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp: In member function ‘void rovio::FeatureCoordinates::drawPoint(cv::Mat&, const Scalar&) const’:
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp:202:5: error: ‘ellipse’ is not a member of ‘cv’
     cv::ellipse(drawImg,get_c(),size,0,0,360,color,-1,8,0);
     ^
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp: In member function ‘void rovio::FeatureCoordinates::drawEllipse(cv::Mat&, const Scalar&, double, bool) const’:
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp:207:5: error: ‘ellipse’ is not a member of ‘cv’
     cv::ellipse(drawImg,get_c(),cv::Size(std::max(static_cast<int>(scaleFactor*sigma1_+0.5),1),std::max(static_cast<int>(scaleFactor*sigma2_+0.5),1)),sigmaAngle_*180/M_PI,0,360,color,1,8,0);
     ^
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp: In member function ‘void rovio::FeatureCoordinates::drawLine(cv::Mat&, const rovio::FeatureCoordinates&, const Scalar&, int) const’:
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp:211:5: error: ‘line’ is not a member of ‘cv’
     cv::line(drawImg,get_c(),other.get_c(),color,thickness);
     ^
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp: In member function ‘void rovio::FeatureCoordinates::drawText(cv::Mat&, const string&, const Scalar&) const’:
/home/uav_master/vision_ws/src/rovio/src/FeatureCoordinates.cpp:215:5: error: ‘putText’ is not a member of ‘cv’
     cv::putText(drawImg,s,get_c(),cv::FONT_HERSHEY_SIMPLEX, 0.4, color);
     ^
In file included from /home/uav_master/vision_ws/src/rovio/include/rovio/MultilevelPatch.hpp:32:0,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FeatureManager.hpp:35,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FilterStates.hpp:38,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/RovioFilter.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/src/rovio_node.cpp:31:
/home/uav_master/vision_ws/src/rovio/include/rovio/Patch.hpp: In member function ‘void rovio::Patch<patchSize>::drawPatchBorder(cv::Mat&, const rovio::FeatureCoordinates&, float, const Scalar&) const’:
/home/uav_master/vision_ws/src/rovio/include/rovio/Patch.hpp:182:7: error: ‘line’ is not a member of ‘cv’
       cv::line(drawImg,c1,c2,color,1);
       ^
/home/uav_master/vision_ws/src/rovio/include/rovio/Patch.hpp:184:7: error: ‘line’ is not a member of ‘cv’
       cv::line(drawImg,c2,c1,color,1);
       ^
/home/uav_master/vision_ws/src/rovio/include/rovio/Patch.hpp:186:7: error: ‘line’ is not a member of ‘cv’
       cv::line(drawImg,c1,c2,color,1);
       ^
/home/uav_master/vision_ws/src/rovio/include/rovio/Patch.hpp:188:7: error: ‘line’ is not a member of ‘cv’
       cv::line(drawImg,c2,c1,color,1);
       ^
make[2]: *** [CMakeFiles/rovio.dir/src/FeatureCoordinates.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/uav_master/vision_ws/src/rovio/include/rovio/MultilevelPatch.hpp:34:0,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FeatureManager.hpp:35,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FilterStates.hpp:38,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/RovioFilter.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/src/rovio_node.cpp:31:
/home/uav_master/vision_ws/src/rovio/include/rovio/ImagePyramid.hpp: In instantiation of ‘void rovio::ImagePyramid<n_levels>::detectFastCorners(std::vector<rovio::FeatureCoordinates>&, int, int) const [with int n_levels = 4]’:
/home/uav_master/vision_ws/src/rovio/include/rovio/ImgUpdate.hpp:906:11:   required from ‘void rovio::ImgUpdate<FILTERSTATE>::commonPostProcess(rovio::ImgUpdate<FILTERSTATE>::mtFilterState&, const mtMeas&) [with FILTERSTATE = rovio::FilterState<25u, 4, 8, 1, 0>; rovio::ImgUpdate<FILTERSTATE>::mtFilterState = rovio::FilterState<25u, 4, 8, 1, 0>; rovio::ImgUpdate<FILTERSTATE>::mtMeas = rovio::ImgUpdateMeas<rovio::State<25u, 4, 8, 1, 0> >]’
/home/uav_master/vision_ws/src/rovio/include/rovio/ImgUpdate.hpp:706:41:   required from ‘void rovio::ImgUpdate<FILTERSTATE>::postProcess(rovio::ImgUpdate<FILTERSTATE>::mtFilterState&, const mtMeas&, const mtOutlierDetection&, bool&) [with FILTERSTATE = rovio::FilterState<25u, 4, 8, 1, 0>; rovio::ImgUpdate<FILTERSTATE>::mtFilterState = rovio::FilterState<25u, 4, 8, 1, 0>; rovio::ImgUpdate<FILTERSTATE>::mtMeas = rovio::ImgUpdateMeas<rovio::State<25u, 4, 8, 1, 0> >; rovio::ImgUpdate<FILTERSTATE>::mtOutlierDetection = rovio::ImgOutlierDetection<rovio::State<25u, 4, 8, 1, 0> >]’
/home/uav_master/vision_ws/src/rovio/src/rovio_node.cpp:118:1:   required from here
/home/uav_master/vision_ws/src/rovio/include/rovio/ImagePyramid.hpp:137:75: error: no matching function for call to ‘cv::FastFeatureDetector::FastFeatureDetector(int&, bool)’
     cv::FastFeatureDetector feature_detector_fast(detectionThreshold, true);
                                                                           ^
/home/uav_master/vision_ws/src/rovio/include/rovio/ImagePyramid.hpp:137:75: note: candidates are:
In file included from /usr/local/include/opencv2/features2d/features2d.hpp:48:0,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FeatureCoordinates.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/RobocentricFeatureElement.hpp:33,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/CoordinateTransform/FeatureOutput.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FilterStates.hpp:36,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/RovioFilter.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/src/rovio_node.cpp:31:
/usr/local/include/opencv2/features2d.hpp:411:20: note: cv::FastFeatureDetector::FastFeatureDetector()
 class CV_EXPORTS_W FastFeatureDetector : public Feature2D
                    ^
/usr/local/include/opencv2/features2d.hpp:411:20: note:   candidate expects 0 arguments, 2 provided
/usr/local/include/opencv2/features2d.hpp:411:20: note: cv::FastFeatureDetector::FastFeatureDetector(const cv::FastFeatureDetector&)
/usr/local/include/opencv2/features2d.hpp:411:20: note:   candidate expects 1 argument, 2 provided
/usr/local/include/opencv2/features2d.hpp:411:20: note: cv::FastFeatureDetector::FastFeatureDetector(cv::FastFeatureDetector&&)
/usr/local/include/opencv2/features2d.hpp:411:20: note:   candidate expects 1 argument, 2 provided
In file included from /home/uav_master/vision_ws/src/rovio/include/rovio/MultilevelPatch.hpp:34:0,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FeatureManager.hpp:35,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FilterStates.hpp:38,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/RovioFilter.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/src/rovio_node.cpp:31:
/home/uav_master/vision_ws/src/rovio/include/rovio/ImagePyramid.hpp:137:29: error: cannot declare variable ‘feature_detector_fast’ to be of abstract type ‘cv::FastFeatureDetector’
     cv::FastFeatureDetector feature_detector_fast(detectionThreshold, true);
                             ^
In file included from /usr/local/include/opencv2/features2d/features2d.hpp:48:0,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FeatureCoordinates.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/RobocentricFeatureElement.hpp:33,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/CoordinateTransform/FeatureOutput.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/FilterStates.hpp:36,
                 from /home/uav_master/vision_ws/src/rovio/include/rovio/RovioFilter.hpp:34,
                 from /home/uav_master/vision_ws/src/rovio/src/rovio_node.cpp:31:
/usr/local/include/opencv2/features2d.hpp:411:20: note:   because the following virtual functions are pure within ‘cv::FastFeatureDetector’:
 class CV_EXPORTS_W FastFeatureDetector : public Feature2D
                    ^
/usr/local/include/opencv2/features2d.hpp:424:26: note: 	virtual void cv::FastFeatureDetector::setThreshold(int)
     CV_WRAP virtual void setThreshold(int threshold) = 0;
                          ^
/usr/local/include/opencv2/features2d.hpp:425:25: note: 	virtual int cv::FastFeatureDetector::getThreshold() const
     CV_WRAP virtual int getThreshold() const = 0;
                         ^
/usr/local/include/opencv2/features2d.hpp:427:26: note: 	virtual void cv::FastFeatureDetector::setNonmaxSuppression(bool)
     CV_WRAP virtual void setNonmaxSuppression(bool f) = 0;
                          ^
/usr/local/include/opencv2/features2d.hpp:428:26: note: 	virtual bool cv::FastFeatureDetector::getNonmaxSuppression() const
     CV_WRAP virtual bool getNonmaxSuppression() const = 0;
                          ^
/usr/local/include/opencv2/features2d.hpp:430:26: note: 	virtual void cv::FastFeatureDetector::setType(int)
     CV_WRAP virtual void setType(int type) = 0;
                          ^
/usr/local/include/opencv2/features2d.hpp:431:25: note: 	virtual int cv::FastFeatureDetector::getType() const
     CV_WRAP virtual int getType() const = 0;
                         ^
make[2]: *** [CMakeFiles/rovio.dir/src/rovio_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/rovio.dir/all] Error 2
make: *** [all] Error 2
